kubernetes/platform/opentelemetry-collector/app/components/route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-collector
spec:
  hostnames:
  - otel-collector.${CLUSTER_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
     - name: otel-collector
       port: 4318
    matches:
    - path:
        type: PathPrefix
        value: /
